@@ -1,3 +1,8 @@
+2006-12-12  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell.c: removed button reliefs to reduce
+	visual clutter. Added tooltips to the menu and navigation buttons.
+
 2006-12-12  Kevin Cozens  <kcozens@cvs.gnome.org>
 
 	* plug-ins/script-fu/scripts/burn-in-anim.scm: Don't allow one of the
